<resources>
    <string name="app_name">BWA MOV</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-walet untuk\ntransaksi tikett nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="nama">Nama</string>
    <string name="email_addres">Email Addres</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nIka Purwanti</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="plh_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">BELI TIKET</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="depok_mall_cinema_3">Depok Mall, Cinema 3</string>
    <string name="items">Items</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="batalkan">BATALKAN</string>
    <string name="simpan_data">SIMPAN DATA</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersisa">Saldo Tersisa</string>
    <string name="my_history">My History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="happy_watching_desc">Tiket telah berhasil dibeli\ndan selamat menikmati film</string>
    <string name="home">HOME</string>
    <string name="lihat_tiket">LIHAT TIKET</string>
</resources>